syntax = "proto3";

option csharp_namespace = "api_demo.Grpc.Protos";

package greet;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (AnyTypeGrpcResponse) {
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message AnyTypeGrpcResponse {
  map<string, google.protobuf.Any> results = 1;
}
